[package]
name = "adafruit-seesaw"
version = "0.5.2"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
edition = "2021"
description = "Platform-agnostic implementation for communicating with devices that run the Seesaw firmware."
documentation = "https://docs.rs/adafruit-seesaw"
categories = ["embedded", "no-std"]
keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "embedded"]
exclude = [".cargo", "memory.x"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexeden/adafruit-seesaw"

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false
test = false

[dependencies]
embassy-sync = "0.3.0"
embedded-hal = {package = "embedded-hal", version = "0.2.7"}
embedded-hal_1 = {package = "embedded-hal", version = "1.0.0-rc.1"}
embedded-hal-async = "1.0.0-rc.1"
defmt = "0.3.5"

[profile.release]
codegen-units = 1
debug = true
lto = true
incremental = false
opt-level = 's'
